# programming-languages

./: w4_6540131.ml  workshop1.docx
miniProject2/: GRAPH_SEARCH_SPEC.md  README.md
miniProject2/data/directed/: d1_simple.in  d3_no_path.txt  d4_tie_shortest.in  d5_long_vs_short_bias.txt  d6_self_loop_dup.in
miniProject2/data/undirected/: u2_two_paths.in  u3_long_vs_short_bias.in  (+1 more)
miniProject2/haskell/bfs/: CHANGELOG.md  README.md  bfs.cabal
miniProject2/haskell/bfs/.stack-work/: stack.sqlite3
miniProject2/haskell/bfs/.stack-work/ghci/b10823cd/: cabal_macros.h
miniProject2/haskell/bfs/.stack-work/ghci/f3824ff3/: cabal_macros.h
miniProject2/haskell/bfs/data/: GRAPH_SEARCH_SPEC.md
miniProject2/haskell/bfs/data/directed/: d2_cycle_multi.txt  d3_no_path.in  d4_tie_shortest.txt
miniProject2/haskell/bfs/data/directed/expected/: d1_simple.bfs.out
miniProject2/haskell/bfs/data/undirected/: u1_simple.txt  u2_two_paths.txt  u4_no_path.in
miniProject2/haskell/bfs/src/: Main.hs
miniProject2/haskell/bfs/src/Graph/: BFS.hs  Directed.hs  Format.hs  Undirected.hs
miniProject2/haskell/dfs/: CHANGELOG.md  README.md  dfs.cabal  stack.yaml
miniProject2/haskell/dfs/.stack-work/: stack.sqlite3
miniProject2/haskell/dfs/.stack-work/ghci/77538523/: cabal_macros.h
miniProject2/haskell/dfs/.stack-work/ghci/a0c2efc9/: cabal_macros.h
miniProject2/haskell/dfs/data/: GRAPH_SEARCH_SPEC.md
miniProject2/haskell/dfs/data/directed/: d1_simple.txt  d2_cycle_multi.in  d6_self_loop_dup.txt
miniProject2/haskell/dfs/data/directed/expected/: d1_simple.dfs.out
miniProject2/haskell/dfs/data/undirected/: u5_triangle_direct_edge.in  u5_triangle_direct_edge.txt
miniProject2/haskell/dfs/data/undirected/expected/: u5_triangle_direct_edge.bfs.out
miniProject2/haskell/dfs/src/: Main.hs
miniProject2/haskell/dfs/src/Graph/: DFS.hs  Directed.hs  Format.hs  Undirected.hs
miniProject2/java/: BFS.java  DFS.java
miniProject2/prolog/: README.md  bfs.pl  bfs_num.pl  dfs.pl  dfs_num.pl
week12/: relations_6540131.pl
week13/Workshop08/: answers.txt  task1.pl  task2.pl  task3.pl  task4.pl  task5.pl
week13/Workshop09/: task1.pl  task2.pl  task3.pl  task4.pl
week14/: task7.md  workshop10Extension.pl  wrokshop10.pl
week8/: w5_6540131.ml
(+22 files in other folders)
