cabal-version:       2.2

name:                bfs
version:             0.1.0.0
homepage:            https://github.com/githubuser/bfs#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kinosaur
maintainer:          example@example.com
category:            Learning
build-type:          Simple
extra-source-files:  README.md

executable bfs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base       >= 4.14 && < 5
    , containers >= 0.7
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints
  other-modules:
      Graph.Format
      Graph.Directed
      Graph.Undirected
      Graph.BFS
  if os(darwin)
    ghc-options: -optl -w