cabal-version:       2.2

name:                dfs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dfs#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kinosaur
maintainer:          example@example.com
copyright:           2025 Kinosaur
category:            Learning
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable dfs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers >= 0.7
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:
    Graph.DFS
    Graph.Undirected
    Graph.Directed

source-repository head
  type:     git
  location: https://github.com/githubuser/dfs
